--- a/styles/home.css
+++ b/styles/home.css
@@ -39,7 +39,7 @@
 }
 
 .st-home-footer-link:first-child {
-  margin-left: 2em;
+  margin-left: 16px;
 }
 
 .st-home-footer-link::after {
